deployment/arctic-db-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: arctic-db
spec:
  type: ExternalName
  externalName: dev-arctic-db.cniqalespell.us-east-1.rds.amazonaws.com
