deployment/arctic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: arctic
  name: arctic-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing # Places the load balancer on public subnets
    alb.ingress.kubernetes.io/target-type: ip # The Pod IPs should be used as the target IPs (rather than the node IPs as was the case with NLB in hte previous section)
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arctic
            port:
               number: 8088
